--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,42 @@
-.font-bold{
-  font-weight: bold;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap');
+
+*{
+  font-family: 'Lato', sans-serif;
+  margin: 0;
+  color: #333;
+}
+
+.App{
+  padding-left: 80px;
+  padding-right: 80px;
+}
+
+.navbar{
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  min-width: 600px;
+  margin: 0 auto;
+  border-bottom: 1px solid #f2f2f2;
+}
+.navbar h1{
+  color: #f1356d;
+}
+.navbar .links{
+  margin-left: auto;
+}
+
+.navbar a{
+  margin: 16px;
+  text-decoration: none;
+  padding: 6px;
+}
+.navbar a:hover{
+  color: #f1356d;
+}
+
+.content{
+  min-width: 600px;
+  margin: 60px auto;
+  padding: 20px;
 }
